--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,6 +21,11 @@ jobs:
       - uses: actions/setup-go@v4
         with:
           go-version: stable
+      - run: |
+          sudo apt-get update
+          sudo apt-get install -y nix-bin
+          sudo systemctl enable --now nix-daemon
+          sudo chmod -R 777 /nix/var/nix/daemon-socket
       - uses: goreleaser/goreleaser-action@v5
         with:
           distribution: goreleaser
